--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Montréal, Quebec, Canada · (438) 874-1891 ·
                         <a href="azaroual.asmaa@gmail.com">azaroual.asmaa@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Passionée de technologie web.</p>
+                    <p class="lead mb-5">Passionnée de technologie web.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/asmaa-azaroual-272b93149/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://gitlab.com/Slendagh"><i class="fab fa-github"></i></a>
