--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">PHP - PDO - CRUD - AJAX - MySQL - Bootstrap </div>
-                            <p>site de vente des articles de bureau pour l'entrée scolaire, avec un panier et une gestion de données pour Admin</p>
+                            <p>Site de vente des articles de bureau pour l'entrée scolaire, avec un panier et une gestion de données pour Admin</p>
                         </div>
                     </div>
                     <!--Carousel Wrapper-->
@@ -259,8 +259,8 @@
                     <h2 class="mb-5">Projet Javascript</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <div class="subheading mb-3">Javascript - jQuery - XML - JSON - AJAX - localStorage - bootstrap</div>
-                            <p>site de locatin de fimls avec panier utilisant localStorage. l'utilisateur peut cliquer sur les films pour avoir acces à un trailer à l'aide d'un modal</p>
+                            <div class="subheading mb-3">Javascript - jQuery - XML - JSON - AJAX - localStorage - bootstrap - CRUD</div>
+                            <p>Site de locatin de fimls avec panier, utilisant localStorage. L'utilisateur peut cliquer sur les films pour avoir accès à une bande d'annonce à l'aide d'un modal.</p>
                         </div>
                     </div>
                      <!--Carousel Wrapper-->
@@ -348,7 +348,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <div class="subheading mb-3">API(unsplash) - Javascript - localStorage - bootstrap - SPA</div>
-                            <p>petit site de recherche et collection des images</p>
+                            <p>Petit site de recherche et collection des images</p>
                         </div>
                     </div>
                      <!--Carousel Wrapper-->
